# baixar-video-you-tube

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml
src/: database.py  downloader.py  main.py  models.py  preview.py  queue_manager.py  settings.py
src/static/css/: styles.css
src/static/js/: app.js
src/templates/: index.html
