[project]
name = "baixar-video"
version = "1.0.0"
description = "Ferramenta de download de vídeos do YouTube"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "yt-dlp",
    "pydantic-settings",
    "python-socketio",
    "jinja2",
    "websockets",
    "pycryptodomex",
    "bgutil-ytdlp-pot-provider"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

