[project]
name = "baixar-video"
version = "2.0.0"
description = "Ferramenta profissional para download de vídeos do YouTube, Instagram, TikTok e mais"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "yt-dlp>=2024.8.6",
    "pydantic-settings>=2.1.0",
    "python-socketio>=5.11.0",
    "jinja2>=3.1.3",
    "websockets>=12.0",
    "pycryptodomex>=3.20.0",
    "bgutil-ytdlp-pot-provider>=0.7.0",
    # New v2.0 dependencies
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.14",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
